--- a/po/VALAPOTFILES.in
+++ b/po/VALAPOTFILES.in
@@ -2,7 +2,9 @@
 ../src/My2DCellArray.vala
 ../src/Gnonogram_cellgrid.vala
 ../src/Gnonogram_controller.vala
+../src/Config.vala
 ../src/Gnonogram_labelbox.vala
+../src/Gnonogram_label.vala
 ../src/Gnonogram_model.vala
 ../src/Gnonogram_region.vala
 ../src/Gnonogram_solver.vala
