--- a/gnonograms-gtk2/misc/gnonograms.desktop
+++ b/gnonograms-gtk2/misc/gnonograms.desktop
@@ -19,3 +19,6 @@ Comment[ja_JP]="nonogram"パズルを設計するし解決もする
 Name[de]=Gnonograms
 GenericName[de]=Logik-Spiel
 Comment[de]=Nonogram-Puzzles erstellen und lösen
+Name[es]=Gnonograms
+GenericName[es]=Juego de lógica
+Comment[es]=Diseñar y resolver nonogramas
